--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -126,6 +126,10 @@
             <div class="author-note" style="color: #7c7c7c; font-style: italic; font-weight: bold;">
               {{ entry.author_note | strip }}
             </div>
+          {% elsif entry.author_note contains "LG" %}
+            <div class="author-note" style="color: #ed0000; font-style: italic; font-weight: bold;">
+              {{ entry.author_note | strip }}
+            </div>
           {% else %}
             <div class="author-note" style="color: #000001; font-style: italic; font-weight: bold;">
               {{ entry.author_note | strip }}
