--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -146,8 +146,8 @@
           {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
         {%- elsif entry.type == "workshops" -%}
           {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
-        {%- elsif entry.type == "preprints" -%}
-          {%- capture entrytype -%}<em>Under Review</em> {%- endcapture -%}
+        <!-- {%- elsif entry.type == "preprints" -%}
+          {%- capture entrytype -%}<em>Under Review</em> {%- endcapture -%} -->
         {%- elsif thesis contains entry.type -%}
           {%- capture entrytype -%}<em>{{entry.school}}</em> {%- endcapture -%}
         {%- else -%}
