--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -110,6 +110,7 @@
         </div>
 
         {%- if entry.author_note -%}
+        {%- unless entry.type == "preprints" -%}
           {% if entry.author_note contains "UIUC" %}
             <div class="author-note" style="color: rgb(255, 94, 0); font-style: italic; font-weight: bold;">
               {{ entry.author_note | strip }}
@@ -135,8 +136,10 @@
               {{ entry.author_note | strip }}
             </div>
           {% endif %}
+        {%- endunless -%}
         {%- endif -%}
 
+        {%- unless entry.type == "preprints" -%}
         <!-- Journal/Book title and date -->
         {% assign proceedings = "inproceedings,incollection" | split: ','%}
         {% assign thesis = "thesis,mastersthesis,phdthesis" | split: ','%}
@@ -146,8 +149,8 @@
           {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
         {%- elsif entry.type == "workshops" -%}
           {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
-        <!-- {%- elsif entry.type == "preprints" -%}
-          {%- capture entrytype -%}<em>Under Review</em> {%- endcapture -%} -->
+        {%- elsif entry.type == "preprints" -%}
+          {%- capture entrytype -%}<em>Under Review</em> {%- endcapture -%}
         {%- elsif thesis contains entry.type -%}
           {%- capture entrytype -%}<em>{{entry.school}}</em> {%- endcapture -%}
         {%- else -%}
@@ -167,6 +170,7 @@
         <div class="periodical">
           {{ entry.note | strip }}
         </div>
+        {%- endunless -%}
 
           <!-- Links/Buttons -->
           <div class="links">
@@ -227,6 +231,7 @@
           {%- endif %}
           </div>
           {% if site.enable_publication_badges %}
+          {%- unless entry.type == "preprints" -%}
           {% assign entry_has_altmetric_badge = entry.altmetric or entry.doi or  entry.eprint or entry.pmid or entry.isbn %}
           {% assign entry_has_dimensions_badge = entry.dimensions or entry.doi or entry.pmid %}
           {% if entry_has_altmetric_badge or entry_has_dimensions_badge %}
@@ -259,6 +264,7 @@
             {%- endif %}
           </div>
           {%- endif %}
+          {%- endunless -%}
           {%- endif %}
 
           {% if entry.abstract -%}
